# UniParking

./: README.md
app/: .dockerignore  .env  Dockerfile  deps.py  docker-compose.yml  main.py  payload.json  pyproject.toml  requirements.txt  seed_db.py  uniparking.db
app/adapters/: http_api.py  mqtt_client.py  repo_postgres.py  ws.py
app/application/: services.py
app/data/: ABC123.json  ABC1234.json  XYZ987.json
app/domain/: SpotAllocator.py  db_models.py  models.py
app/infra/db/init/: init.sql
app/mosquitto/config/: mosquitto.conf
app/static/: ws-dashboard.css  ws-dashboard.html  ws-spot.css  ws-spot.html
monitoring/: docker-compose.yml
monitoring/grafana/: grafana.db
monitoring/grafana/dashboards/: uniparking-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
uniparking-access-controller/: .env  docker-compose.yml  requirements.txt
uniparking-access-controller/Diagrams/: diagrama_componentes.puml  diagrama_despliegue.puml  diagrama_secuencia.puml
uniparking-access-controller/adapters/: http_api.py  mqtt_client.py
uniparking-access-controller/app/: deps.py  main.py
uniparking-access-controller/application/: services.py
uniparking-access-controller/domain/: models.py
